year_two/IPP/tests/constants/bad/test4.src
.ippcode18

WRITE bool@truea
